--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -1,5 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SERVER_DOMAIN=http://10.13.184.25:8762
+REACT_APP_SERVER_DOMAIN=http://10.13.184.25:8762/api
 REACT_APP_DOMAIN_NAME=.cogenthealth.com.np
 REACT_APP_SUB_DEPARTMENT_CODE=SUP
 REACT_APP_SIDE_BAR_CODE=/admin
