--- a/packages/apps/admin/package.json
+++ b/packages/apps/admin/package.json
@@ -18,6 +18,7 @@
     "@frontend-appointment/redux-module": "1.0.0",
     "@frontend-appointment/commons": "1.0.0",
     "@frontend-appointment/thunk-middleware": "1.0.0",
+    "@frontend-appointment/web-resource-key-constants":"1.0.0",
     "@frontend-appointment/helpers": "1.0.0"
   },
   "scripts": {
