--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:admin": "GENERATE_SOURCEMAP=false && yarn workspace @frontend-appointment/admin build",
     "clean": "lerna exec -- rimraf dist && lerna exec -- rimraf build && lerna clean --yes && rimraf node_modules",
     "admin": "yarn workspace @frontend-appointment/admin start",
-    "build":"yarn build:admin"
+    "build": "yarn build:admin"
   },
   "workspaces": {
     "packages": [
@@ -94,7 +94,11 @@
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
     "react-fontawesome": "^1.7.1",
+    "react-icons": "^3.8.0",
+    "react-image-crop": "^8.5.0",
+    "react-images": "^1.1.0-beta.2",
     "react-loadable": "^5.5.0",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.8",
@@ -105,8 +109,7 @@
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.3",
     "sinon": "^7.4.1",
-    "styled-components": "^4.3.2",
-    "react-icons": "^3.8.0"
+    "styled-components": "^4.3.2"
   },
   "jest": {
     "collectCoverageFrom": [
