--- a/packages/apps/admin/.env.development
+++ b/packages/apps/admin/.env.development
@@ -1,5 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SERVER_DOMAIN=http://10.13.184.16:9090/
+REACT_APP_SERVER_DOMAIN=http://localhost:9090
 #REACT_APP_SUB_DEPARTMENT_CODE=SUP
 #REACT_APP_SIDE_BAR_CODE=/admin
 PORT=3301
