--- a/packages/ui-elements/src/CHybridInput/package.json
+++ b/packages/ui-elements/src/CHybridInput/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@frontend-appointment/c-hybrid-input",
+  "name": "@cogent/c-hybrid-input",
   "version": "0.0.0",
   "main": "CHybridInput.js",
   "author": "Sabu Shakya",
