--- a/packages/ui-components/package.json
+++ b/packages/ui-components/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "main:src": "index.js",
   "dependencies":{
-    "@frontend-appointment/ui-elements": "1.0.0"
+    "@frontend-appointment/ui-elements": "1.0.0",
+    "@frontend-appointment/helpers": "1.0.0",
+    "@frontend-appointment/core": "1.0.0",
+    "@frontend-appointment/web-resource-key-constants": "1.0.0"
   }
 }
