hospital setup issues + other issues

--- a/packages/apps/admin/.env.development
+++ b/packages/apps/admin/.env.development
@@ -4,3 +4,5 @@ REACT_APP_SERVER_DOMAIN=http://10.13.184.14:9090
 #REACT_APP_SIDE_BAR_CODE=/admin
 PORT=3301
 REACT_APP_MODULE_CODE=SUP
+#IN 2 MB = 2097152 bytes
+REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=2097152
