--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -3,3 +3,5 @@ REACT_APP_SERVER_DOMAIN=http://10.13.184.25:8762/api
 REACT_APP_DOMAIN_NAME=.cogenthealth.com.np
 REACT_APP_SUB_DEPARTMENT_CODE=SUP
 REACT_APP_SIDE_BAR_CODE=/admin
+#IN 2 MB = 2097152 bytes
+REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=2097152
