--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "prop-types": "^15.7.2",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-custom-scrollbars": "^4.2.1",
+    "react-datepicker": "^2.11.0",
     "react-dom": "^16.8.6",
     "react-dom-factories": "^1.0.2",
     "react-fontawesome": "^1.7.1",
