--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -31,14 +31,14 @@
           "order": 2,
           "enabled": "Y",
           "menuFor": "1",
-          "description": "Medicine",
+          "description": "DepartmentSetup",
           "childMenus": []
         },
         {
           "id": "3",
           "parentId": "1",
           "name": "Specialization Setup",
-          "path": "/specializations",
+          "path": "/specialization",
           "roles": [
             2,
             3,
@@ -51,7 +51,7 @@
           "order": 3,
           "enabled": "Y",
           "menuFor": "1",
-          "description": "Medicine",
+          "description": "Specialization",
           "childMenus": []
         },
         {
@@ -71,7 +71,7 @@
           "order": 4,
           "enabled": "Y",
           "menuFor": "1",
-          "description": "Medicine",
+          "description": "Profile Setup",
           "childMenus": []
         },
         {
@@ -92,14 +92,14 @@
           "order": 5,
           "enabled": "Y",
           "menuFor": "1",
-          "description": "Medicine",
+          "description": "Admin Setup",
           "childMenus": []
         },
         {
           "id": "6",
           "parentId": "1",
           "name": "Hospital Setup",
-          "path": "/hospitals",
+          "path": "/hospital",
           "roles": [
             2,
             3,
@@ -132,23 +132,38 @@
           "order": 3,
           "enabled": "Y",
           "menuFor": "1",
-          "description": "Medicine",
+          "description": "Doctor Setup",
+          "childMenus": []
+        },
+        {
+          "id": "8",
+          "parentId": "1",
+          "name": "Qualification Setup",
+          "path": "/qualification",
+          "roles": [
+            2,
+            3,
+            4,
+            5
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 3,
+          "enabled": "Y",
+          "menuFor": "1",
+          "description": "Qualification Setup",
           "childMenus": []
         }
       ]
     },
     {
-      "id": "8",
+      "id": "9",
       "parentId": null,
       "name": "Doctor Duty Roster",
       "path": "/doctorDutyRoster",
-      "roles": [
-        2,
-        3,
-        4,
-        5
-      ],
-      "icon": "fa fa-calculator",
+      "roles": [2,3,4,5],
+      "icon": "fa fa-bar-chart",
       "leftNavigation": "Y",
       "checked": false,
       "order": 1,
@@ -158,7 +173,7 @@
       "childMenus": []
     },
     {
-      "id": "9",
+      "id": "10",
       "parentId": null,
       "name": "Appointment",
       "path": "/appointment",
@@ -172,15 +187,14 @@
       "description": "appointment",
       "childMenus": [
         {
-          "id": "10",
-          "parentId": "9",
+          "id": "11",
+          "parentId": "10",
           "name": "Appointment Status",
           "path": "/appoinmentStatus",
           "roles": [
             2,
             3,
-            4,
-            5
+            4
           ],
           "icon": "",
           "leftNavigation": "Y",
@@ -192,8 +206,8 @@
           "childMenus": []
         },
         {
-          "id": "11",
-          "parentId": "9",
+          "id": "12",
+          "parentId": "10",
           "name": "Refund Request List",
           "path": "/refundRequestList",
           "roles": [
@@ -212,8 +226,8 @@
           "childMenus": []
         },
         {
-          "id": "12",
-          "parentId": "9",
+          "id": "13",
+          "parentId": "10",
           "name": "Appointment Visits",
           "path": "/appointmentVisits",
           "roles": [
@@ -232,8 +246,8 @@
           "childMenus": []
         },
         {
-          "id": "13",
-          "parentId": "9",
+          "id": "14",
+          "parentId": "10",
           "name": "Appointment Log",
           "path": "/appointmentLog",
           "roles": [
