--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -18,7 +18,7 @@
           "id": "2",
           "parentId": "1",
           "name": "DepartmentSetup",
-          "path": "/department",
+          "path": "/generalSetup/department",
           "roles": [
             2,
             3,
@@ -38,7 +38,7 @@
           "id": "3",
           "parentId": "1",
           "name": "Specialization Setup",
-          "path": "/specialization",
+          "path": "/generalSetup/specialization",
           "roles": [
             2,
             3,
@@ -58,7 +58,7 @@
           "id": "4",
           "parentId": "1",
           "name": "Profile Setup",
-          "path": "/profile",
+          "path": "/generalSetup/profile",
           "roles": [
             2,
             3,
@@ -78,7 +78,7 @@
           "id": "5",
           "parentId": "1",
           "name": "Admin Setup",
-          "path": "/admin-setup",
+          "path": "/generalSetup/admin-setup",
           "roles": [
             2,
             3,
@@ -99,7 +99,7 @@
           "id": "6",
           "parentId": "1",
           "name": "Hospital Setup",
-          "path": "/hospital",
+          "path": "/generalSetup/hospital",
           "roles": [
             2,
             3,
@@ -119,7 +119,7 @@
           "id": "7",
           "parentId": "1",
           "name": "Doctor Setup",
-          "path": "/doctor",
+          "path": "/generalSetup/doctor",
           "roles": [
             2,
             3,
@@ -139,7 +139,7 @@
           "id": "8",
           "parentId": "1",
           "name": "Qualification Setup",
-          "path": "/qualification",
+          "path": "/generalSetup/qualification",
           "roles": [
             2,
             3,
