--- a/packages/apps/admin/.env.development
+++ b/packages/apps/admin/.env.development
@@ -5,4 +5,4 @@ REACT_APP_SERVER_DOMAIN=http://10.13.184.25:9090/
 REACT_APP_SIDE_BAR_CODE=/admin
 PORT=3301
 REACT_APP_MODULE_CODE=SUP
-
+NODE_ENV=development
