--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,8 +3,5 @@
   "version": "1.0.0",
   "main": "index.js",
   "main:src": "index.js",
-  "private": true,
-  "dependencies": {
-    "@frontend-appointment/helpers":"1.0.0"
-  }
+  "private": true
 }
