--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -190,7 +190,7 @@
           "id": "11",
           "parentId": "10",
           "name": "Appointment Status",
-          "path": "/appoinmentStatus",
+          "path": "/appointment/appointmentStatus",
           "roles": [
             2,
             3,
@@ -202,14 +202,14 @@
           "order": 1,
           "enabled": "Y",
           "menuFor": "6",
-          "description": "appoinmentStatus",
+          "description": "appointmentStatus",
           "childMenus": []
         },
         {
           "id": "12",
           "parentId": "10",
           "name": "Refund Request List",
-          "path": "/refundRequestList",
+          "path": "/appointment/refundRequestList",
           "roles": [
             2,
             3,
@@ -229,7 +229,7 @@
           "id": "13",
           "parentId": "10",
           "name": "Appointment Visits",
-          "path": "/appointmentVisits",
+          "path": "/appointment/appointmentVisits",
           "roles": [
             2,
             3,
@@ -249,7 +249,7 @@
           "id": "14",
           "parentId": "10",
           "name": "Appointment Log",
-          "path": "/appointmentLog",
+          "path": "/appointment/appointmentLog",
           "roles": [
             2,
             3,
