--- a/packages/apps/admin/.env.development
+++ b/packages/apps/admin/.env.development
@@ -1,7 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SERVER_DOMAIN=http://10.13.184.14:9090
+#REACT_APP_SERVER_DOMAIN=http://10.13.184.14:9090
 #REACT_APP_SERVER_DOMAIN=http://10.10.36.34:9090
-#REACT_APP_SERVER_DOMAIN=http://localhost:9090
+REACT_APP_SERVER_DOMAIN=http://localhost:8080
 #REACT_APP_SUB_DEPARTMENT_CODE=SUP
 REACT_APP_BASE_PATH_CODE=/admin
 PORT=3301
