--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "bootstrap": "^4.3.1",
     "bootstrap-switch-button-react": "^1.1.0",
     "chalk": "^2.4.2",
+    "chart.js": "^2.9.3",
     "check-prop-types": "^1.1.2",
     "concurrently": "^5.0.2",
     "dotenv": "^8.0.0",
@@ -90,6 +91,7 @@
     "pretty-format": "^24.8.0",
     "prop-types": "^15.7.2",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-chartjs-2": "^2.9.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.8.6",
