--- a/packages/apps/admin/.env.development
+++ b/packages/apps/admin/.env.development
@@ -1,6 +1,6 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SERVER_DOMAIN=http://10.13.184.16:9090
-#REACT_APP_SERVER_DOMAIN=http://localhost:8080
+#REACT_APP_SERVER_DOMAIN=http://10.13.184.16:9090
+REACT_APP_SERVER_DOMAIN=http://localhost:8080
 #REACT_APP_SUB_DEPARTMENT_CODE=SUP
 REACT_APP_BASE_PATH_CODE=/admin
 PORT=3301
