--- a/packages/apps/admin/.env.development
+++ b/packages/apps/admin/.env.development
@@ -1,4 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
+PORT=3302
 REACT_APP_SERVER_DOMAIN=http://10.13.184.25:7072
 #REACT_APP_SERVER_DOMAIN=http://localhost:8080
 #REACT_APP_SUB_DEPARTMENT_CODE=SUP
