patient-info design issue

--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -305,7 +305,7 @@
         4,
         5
       ],
-      "icon": "fa fa-bar-chart",
+      "icon": "fa fa-id-badge",
       "leftNavigation": "Y",
       "checked": false,
       "order": 1,
