Change patient icon
Took 3 minutes

--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -303,7 +303,7 @@
        23,
        24
       ],
-      "icon": "fa fa-id-badge",
+      "icon": "fa fa-bed",
       "leftNavigation": "Y",
       "checked": false,
       "order": 1,
