--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -283,7 +283,7 @@
         23,
         24
       ],
-      "icon": "fa fa-bar-chart",
+      "icon": "fa fa-bed",
       "leftNavigation": "Y",
       "checked": false,
       "order": 1,
