package.json file change
Took 12 minutes

--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -1,9 +1,17 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_SERVER_DOMAIN=http://10.13.184.25:7072/api
-REACT_APP_DOMAIN_NAME=.cogenthealth.com.np
-REACT_APP_BASE_PATH_CODE=/admin
-PORT=3301
-REACT_APP_MODULE_CODE=SUP
+PORT=3302
+#REACT_APP_SERVER_DOMAIN=http://10.13.184.16:9091
+REACT_APP_SERVER_DOMAIN=http://10.13.184.25:9091
+REACT_APP_BASE_PATH_CODE=
+REACT_APP_MODULE_CODE=CLIENT
+REACT_APP_AUTH_TOKEN=c-auth-token
+
+REACT_APP_ADMIN_SERVER_DOMAIN=http://10.13.184.25
+REACT_APP_CLIENT_SERVER_DOMAIN=http://10.13.184.25
+REACT_APP_ADMIN_PORT=3301
+REACT_APP_CLIENT_PORT=3302
+REACT_APP_ADMIN_MODULE_CODE=ADMIN
+REACT_APP_CLIENT_MODULE_CODE=CLIENT
+
 #IN 2 MB = 2097152 bytes
-REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=2097152
-REACT_APP_HOSPITAL_CODE=CGNT
+REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
