--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -211,7 +211,7 @@
         {
           "id": "12",
           "parentId": "10",
-          "name": "Pending Appointment Approval",
+          "name": "Appointment Checkin",
           "path": "/appointment/appointmentApprovalRequest",
           "roles": [
            13,14,15
