--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@loadable/component": "^5.12.0",
     "ag-grid": "^18.1.2",
     "axios": "^0.19.0",
     "babel-core": "^6.26.3",
