--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -1,17 +1,14 @@
 SKIP_PREFLIGHT_CHECK=true
-PORT=3301
-#REACT_APP_BACKEND_SERVER_DOMAIN=http://10.13.184.16:9091
-REACT_APP_BACKEND_SERVER_DOMAIN=http://10.13.184.16:9091
+#PORT=3301
+REACT_APP_BACKEND_SERVER_DOMAIN=http://10.13.184.25:9090
 REACT_APP_BASE_PATH_CODE=/admin
 REACT_APP_MODULE_CODE=ADMIN
 REACT_APP_AUTH_TOKEN=a-auth-token
-
-REACT_APP_ADMIN_FRONTEND_DOMAIN_URL=http://10.13.184.14
-REACT_APP_CLIENT_FRONTEND_DOMAIN_URL=http://10.13.184.14
+REACT_APP_ADMIN_FRONTEND_DOMAIN_URL=http://localhost
+REACT_APP_CLIENT_FRONTEND_DOMAIN_URL=http://localhost
 REACT_APP_FRONTEND_ADMIN_PORT=3301
 REACT_APP_FRONTEND_CLIENT_PORT=3302
 REACT_APP_ADMIN_MODULE_CODE=ADMIN
 REACT_APP_CLIENT_MODULE_CODE=CLIENT
-
 #IN 2 MB = 2097152 bytes
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
