--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -1,5 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
-PORT=3302
+#PORT=3302
 #REACT_APP_BACKEND_SERVER_DOMAIN=http://10.13.184.16:9091
 REACT_APP_BACKEND_SERVER_DOMAIN=http://10.13.184.16:9091
 REACT_APP_BASE_PATH_CODE=
