--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chart.js": "^2.9.3",
     "check-prop-types": "^1.1.2",
     "concurrently": "^5.0.2",
+    "datalist-polyfill": "^1.24.1",
     "dotenv": "^8.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
