--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -1,14 +1,17 @@
 SKIP_PREFLIGHT_CHECK=true
-#PORT=3301
-REACT_APP_BACKEND_SERVER_DOMAIN=http://10.13.184.25:9090
+REACT_APP_BACKEND_SERVER_DOMAIN=http://uat-admin-appointmentapi.cogenthealth.com.np
 REACT_APP_BASE_PATH_CODE=/admin
 REACT_APP_MODULE_CODE=ADMIN
 REACT_APP_AUTH_TOKEN=a-auth-token
-REACT_APP_ADMIN_FRONTEND_DOMAIN_URL=http://localhost
-REACT_APP_CLIENT_FRONTEND_DOMAIN_URL=http://localhost
+
+# FOR EMAIL LINK- TO SET URL FOR PASSWORD SAVE PAGE
+REACT_APP_ADMIN_FRONTEND_DOMAIN_URL=http://uat-admin-appointment.cogenthealth.com.np
+REACT_APP_CLIENT_FRONTEND_DOMAIN_URL=http://uat-client-appointment.cogenthealth.com.np
+# PORTS TO BE REMOVED
 REACT_APP_FRONTEND_ADMIN_PORT=3301
 REACT_APP_FRONTEND_CLIENT_PORT=3302
 REACT_APP_ADMIN_MODULE_CODE=ADMIN
 REACT_APP_CLIENT_MODULE_CODE=CLIENT
+
 #IN 2 MB = 2097152 bytes
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
