Change production server url
Took 1 hour 47 minutes

--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -1,5 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_BACKEND_SERVER_DOMAIN=http://uat-clientapi-appointment.cogenthealth.com.np
+REACT_APP_BACKEND_SERVER_DOMAIN=http://uat-clientapi-appointment.cogenthealth.com.np/client
 REACT_APP_BASE_PATH_CODE=
 REACT_APP_MODULE_CODE=CLIENT
 REACT_APP_AUTH_TOKEN=c-auth-token
