Convert hospital setup to client
Took 2 hours 2 minutes

--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -98,8 +98,8 @@
         {
           "id": "6",
           "parentId": "1",
-          "name": "Hospital Setup",
-          "path": "/generalSetup/hospital",
+          "name": "Client Setup",
+          "path": "/generalSetup/client",
           "roles": [
             2,
             3,
