--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -12,6 +12,6 @@ REACT_APP_FRONTEND_ADMIN_PORT=3301
 REACT_APP_FRONTEND_CLIENT_PORT=3302
 REACT_APP_ADMIN_MODULE_CODE=ADMIN
 REACT_APP_CLIENT_MODULE_CODE=CLIENT
-
+REACT_APP_SECRET_KEY=cogent-client-appointment-9844-2966
 #IN 2 MB = 2097152 bytes
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
