Modify profile setups and role tab filter according to changes in roles.json
Took 1 hour 7 minutes

--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -362,7 +362,7 @@
       "id": "20",
       "parentId": null,
       "name": "Company Settings",
-      "path": "/adminSetup",
+      "path": "/companySettings",
       "roles": [],
       "icon": "fa fa-building-o",
       "leftNavigation": "Y",
