--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
+    "react-router-redux": "^4.0.8",
     "react-select": "^3.0.8",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.2.0",
