--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -35,26 +35,6 @@
           "childMenus": []
         },
         {
-          "id": "3",
-          "parentId": "1",
-          "name": "Specialization Setup",
-          "path": "/generalSetup/specialization",
-          "roles": [
-            2,
-            3,
-            4,
-            5
-          ],
-          "icon": "",
-          "leftNavigation": "Y",
-          "checked": false,
-          "order": 3,
-          "enabled": "Y",
-          "menuFor": "1",
-          "description": "Specialization",
-          "childMenus": []
-        },
-        {
           "id": "4",
           "parentId": "1",
           "name": "Profile Setup",
@@ -77,7 +57,7 @@
         {
           "id": "5",
           "parentId": "1",
-          "name": "Admin Setup",
+          "name": "Client Admin Setup",
           "path": "/generalSetup/admin-setup",
           "roles": [
             2,
@@ -134,47 +114,9 @@
           "menuFor": "1",
           "description": "Doctor Setup",
           "childMenus": []
-        },
-        {
-          "id": "8",
-          "parentId": "1",
-          "name": "Qualification Setup",
-          "path": "/generalSetup/qualification",
-          "roles": [
-            2,
-            3,
-            4,
-            5
-          ],
-          "icon": "",
-          "leftNavigation": "Y",
-          "checked": false,
-          "order": 3,
-          "enabled": "Y",
-          "menuFor": "1",
-          "description": "Qualification Setup",
-          "childMenus": []
-        },
-        {
-          "id": "19",
-          "parentId": "1",
-          "name": "University Setup",
-          "path": "/generalSetup/universitySetup",
-          "roles": [
-            10,
-            11,
-            12,
-            13
-          ],
-          "icon": "",
-          "leftNavigation": "Y",
-          "checked": false,
-          "order": 3,
-          "enabled": "Y",
-          "menuFor": "1",
-          "description": "University Setup",
-          "childMenus": []
         }
+
+
       ]
     },
     {
@@ -430,6 +372,66 @@
           "enabled": "Y",
           "menuFor": "1",
           "description": "Qualification Alias Setup",
+          "childMenus": []
+        },
+        {
+          "id": "19",
+          "parentId": "20",
+          "name": "University Setup",
+          "path": "/companySettings/universitySetup",
+          "roles": [
+            10,
+            11,
+            12,
+            13
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 3,
+          "enabled": "Y",
+          "menuFor": "1",
+          "description": "University Setup",
+          "childMenus": []
+        },
+        {
+          "id": "8",
+          "parentId": "20",
+          "name": "Qualification Setup",
+          "path": "/companySettings/qualification",
+          "roles": [
+            2,
+            3,
+            4,
+            5
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 3,
+          "enabled": "Y",
+          "menuFor": "1",
+          "description": "Qualification Setup",
+          "childMenus": []
+        },
+        {
+          "id": "3",
+          "parentId": "20",
+          "name": "Specialization Setup",
+          "path": "/companySettings/specialization",
+          "roles": [
+            2,
+            3,
+            4,
+            5
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 3,
+          "enabled": "Y",
+          "menuFor": "1",
+          "description": "Specialization",
           "childMenus": []
         }
       ]
