Remove base path of modules from production
Took 1 hour 2 minutes

--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -1,5 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_BACKEND_SERVER_DOMAIN=https://uat-adminapi-appointment.cogenthealth.com.np/admin
+REACT_APP_BACKEND_SERVER_DOMAIN=https://uat-adminapi-appointment.cogenthealth.com.np
 REACT_APP_BASE_PATH_CODE=/admin
 REACT_APP_MODULE_CODE=ADMIN
 REACT_APP_AUTH_TOKEN=a-auth-token
