--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -15,3 +15,5 @@ REACT_APP_CLIENT_MODULE_CODE=CLIENT
 REACT_APP_SECRET_KEY=cogent-client-appointment-9844-2966
 #IN 2 MB = 2097152 bytes
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
+REACT_APP_LOGGING_SERVER_DOMAIN=http://localhost:9093
+LOGGING_BASE=logging
