--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -4,6 +4,10 @@ REACT_APP_BASE_PATH_CODE=
 REACT_APP_MODULE_CODE=CLIENT
 REACT_APP_AUTH_TOKEN=c-auth-token
 
+# FOR LOGGING
+REACT_APP_LOGGING_SERVER_DOMAIN=http://localhost:9093
+LOGGING_BASE=logging
+
 # FOR EMAIL LINK- TO SET URL FOR PASSWORD SAVE PAGE
 REACT_APP_ADMIN_FRONTEND_EMAIL_REDIRECT_URL=https://uat-admin-appointment.cogenthealth.com.np
 REACT_APP_CLIENT_FRONTEND_EMAIL_REDIRECT_URL=https://uat-client-appointment.cogenthealth.com.np
@@ -15,5 +19,3 @@ REACT_APP_CLIENT_MODULE_CODE=CLIENT
 REACT_APP_SECRET_KEY=cogent-client-appointment-9844-2966
 #IN 2 MB = 2097152 bytes
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
-REACT_APP_LOGGING_SERVER_DOMAIN=http://localhost:9093
-LOGGING_BASE=logging
