--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -5,8 +5,8 @@ REACT_APP_MODULE_CODE=CLIENT
 REACT_APP_AUTH_TOKEN=c-auth-token
 
 # FOR LOGGING
-REACT_APP_LOGGING_SERVER_DOMAIN=http://10.13.186.179:8080logging
-LOGGING_BASE=logging
+REACT_APP_LOGGING_SERVER_DOMAIN=http://10.13.186.179:8080
+REACT_APP_LOGGING_BASE=logging
 
 # FOR EMAIL LINK- TO SET URL FOR PASSWORD SAVE PAGE
 REACT_APP_ADMIN_FRONTEND_EMAIL_REDIRECT_URL=https://uat-admin-appointment.cogenthealth.com.np
