--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "lerna": "^3.15.0",
     "material-design-icons": "^3.0.1",
     "material-icons": "^0.3.1",
+    "moment": "^2.24.0",
     "moxios": "^0.4.0",
     "node-sass": "^4.12.0",
     "npm": "^6.14.4",
