Change logging url of production
Took 12 minutes

--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -5,7 +5,7 @@ REACT_APP_MODULE_CODE=ADMIN
 REACT_APP_AUTH_TOKEN=a-auth-token
 
 # FOR LOGGING
-REACT_APP_LOGGING_SERVER_DOMAIN=http://10.13.186.179:8080
+REACT_APP_LOGGING_SERVER_DOMAIN=https://uat-loggingapi-appointment.cogenthealth.com.np
 REACT_APP_LOGGING_BASE=/logging
 
 # FOR EMAIL LINK- TO SET URL FOR PASSWORD SAVE PAGE
