--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -313,6 +313,23 @@
           "menuFor": "6",
           "description": "Transaction Log",
           "childMenus": []
+        },
+        {
+          "id": "21",
+          "parentId": "14",
+          "name": "Transfer Log",
+          "path": "/reports/transferLog",
+          "roles": [
+            12
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "Transfer Log",
+          "childMenus": []
         }
       ]
     },
