--- a/packages/apps/client/.env.production
+++ b/packages/apps/client/.env.production
@@ -19,3 +19,4 @@ REACT_APP_CLIENT_MODULE_CODE=CLIENT
 REACT_APP_SECRET_KEY=cogent-client-appointment-9844-2966
 #IN 2 MB = 2097152 bytes
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
+REACT_APP_IP_TRACKER=f116bc7ce420a676b367311dbf9c4060
