--- a/packages/apps/admin/.env.production
+++ b/packages/apps/admin/.env.production
@@ -19,4 +19,4 @@ REACT_APP_CLIENT_MODULE_CODE=CLIENT
 REACT_APP_SECRET_KEY=cogent-admin-appointment-9987-2287
 #IN 2 MB = 2097152 bytes
 REACT_APP_IMAGE_UPLOAD_SIZE_LIMIT=5242880
-
+REACT_APP_IP_TRACKER=f116bc7ce420a676b367311dbf9c4060
