Add room setup crud in client
Took 17 minutes

--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -17,8 +17,8 @@
         {
           "id": "2",
           "parentId": "1",
-          "name": "Department Setup",
-          "path": "/generalSetup/departmentSetup",
+          "name": "Unit Setup",
+          "path": "/generalSetup/unitSetup",
           "roles": [
             2,
             3,
@@ -31,7 +31,7 @@
           "order": 2,
           "enabled": "Y",
           "menuFor": "1",
-          "description": "Department Setup",
+          "description": "Unit Setup",
           "childMenus": []
         },
         {
@@ -153,6 +153,46 @@
           "enabled": "Y",
           "menuFor": "1",
           "description": "Qualification Alias Setup",
+          "childMenus": []
+        },
+        {
+          "id": "22",
+          "parentId": "1",
+          "name": "Room Setup",
+          "path": "/generalSetup/roomSetup",
+          "roles": [
+            10,
+            11,
+            12,
+            13
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 3,
+          "enabled": "Y",
+          "menuFor": "1",
+          "description": "Room Setup",
+          "childMenus": []
+        },
+        {
+          "id": "23",
+          "parentId": "1",
+          "name": "Department Setup",
+          "path": "/generalSetup/departmentSetup",
+          "roles": [
+            2,
+            3,
+            4,
+            5
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 3,
+          "enabled": "Y",
+          "menuFor": "1",
+          "description": "Department Setup",
           "childMenus": []
         }
       ]
