--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -364,6 +364,26 @@
           "menuFor": "1",
           "description": "Admin Api Integration",
           "childMenus": []
+        },
+        {
+          "id": "36",
+          "parentId": "33",
+          "name": "Request Body Integration",
+          "path": "/apiIntegration/requestBodyIntegration",
+          "roles": [
+            2,
+            3,
+            4,
+            5
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "Request Body Integration",
+          "childMenus": []
         }]},
     {
       "id": "20",
