Fix profile preview role icon name display issue
Took 9 minutes

--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -183,7 +183,7 @@
             5,
             8
           ],
-          "icon": "fa fa-user-md",
+          "icon": "",
           "leftNavigation": "Y",
           "checked": false,
           "order": 1,
@@ -204,7 +204,7 @@
             5,
             8
           ],
-          "icon": "fa fa-user-md",
+          "icon": "",
           "leftNavigation": "Y",
           "checked": false,
           "order": 1,
