--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -323,7 +323,25 @@
           "menuFor": "6",
           "description": "appointmentStatus",
           "childMenus": []
+        },
+        {
+          "id": "27",
+          "parentId": 10,
+          "name": "Appointment Status Department",
+          "path": "/appointment/appointentStatusByDepartment",
+          "roles": [
+            12
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "appointmentStatusbydepartment",
+          "childMenus": []
         }
+    
       ]
     },
     {
