--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -249,6 +249,24 @@
           "childMenus": []
         },
         {
+          "id": 41,
+          "parentId": 10,
+          "name": "Appointment Status Department",
+          "path": "/appointment/appointentStatusByDepartment",
+          "roles": [
+            12
+          ],
+          "icon": "",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "appointmentStatusbydepartment",
+          "childMenus": []
+        },
+    
+        {
           "id": "12",
           "parentId": "10",
           "name": "Appointment Check-In",
