--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "react-addons-shallow-compare": "^15.6.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-chartjs-2": "^2.9.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.8.6",
