--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -327,7 +327,7 @@
         {
           "id": "27",
           "parentId": 10,
-          "name": "Appointment Status Department",
+          "name": "Department Appointment Status",
           "path": "/appointment/appointentStatusByDepartment",
           "roles": [
             12
