--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -479,6 +479,23 @@
       "menuFor": "6",
       "description": "Appointment Quick CheckIn",
       "childMenus": []
+    },
+    {
+      "id": "28",
+      "parentId": null,
+      "name": "Quick Department Wise Appt. Check-In",
+      "path": "/departmentWiseAppointmentQuickCheckIn",
+      "roles": [
+        12,14
+      ],
+      "icon": "fa fa-bookmark",
+      "leftNavigation": "Y",
+      "checked": false,
+      "order": 1,
+      "enabled": "Y",
+      "menuFor": "6",
+      "description": "Appointment Quick CheckIn",
+      "childMenus": []
     }
   ]
 }
