--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -341,7 +341,6 @@
           "description": "appointmentStatusbydepartment",
           "childMenus": []
         }
-    
       ]
     },
     {
@@ -464,12 +463,13 @@
       "childMenus": []
     },
     {
-      "id": "26",
+      "id": "29",
       "parentId": null,
-      "name": "Quick Appt. Check-In",
-      "path": "/appointmentQuickCheckIn",
+      "name": "Quick Menu",
+      "path": "/quickMenu",
       "roles": [
-        12,14
+        12,
+        14
       ],
       "icon": "fa fa-bookmark",
       "leftNavigation": "Y",
@@ -477,25 +477,45 @@
       "order": 1,
       "enabled": "Y",
       "menuFor": "6",
-      "description": "Appointment Quick CheckIn",
-      "childMenus": []
-    },
-    {
-      "id": "28",
-      "parentId": null,
-      "name": "Quick Department Wise Appt. Check-In",
-      "path": "/departmentWiseAppointmentQuickCheckIn",
-      "roles": [
-        12,14
-      ],
-      "icon": "fa fa-bookmark",
-      "leftNavigation": "Y",
-      "checked": false,
-      "order": 1,
-      "enabled": "Y",
-      "menuFor": "6",
-      "description": "Appointment Quick CheckIn",
-      "childMenus": []
+      "description": "Quick Menu",
+      "childMenus": [
+        {
+          "id": "26",
+          "parentId": null,
+          "name": "Doctor Check-In",
+          "path": "/quickMenu/doctorCheckIn",
+          "roles": [
+            12,
+            14
+          ],
+          "icon": "fa fa-bookmark",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "Doctor Quick CheckIn",
+          "childMenus": []
+        },
+        {
+          "id": "28",
+          "parentId": null,
+          "name": "Department Check-In",
+          "path": "/quickMenu/departmentCheckIn",
+          "roles": [
+            12,
+            14
+          ],
+          "icon": "fa fa-bookmark",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "Department Quick CheckIn",
+          "childMenus": []
+        }
+      ]
     }
   ]
 }
