--- a/packages/helpers/src/cogent-appointment-admin-menu.json
+++ b/packages/helpers/src/cogent-appointment-admin-menu.json
@@ -728,6 +728,61 @@
           "childMenus": []
         }
       ]
+    },
+    {
+      "id": "42",
+      "parentId": null,
+      "name": "Quick Menu",
+      "path": "/quickMenu",
+      "roles": [
+        12,
+        14
+      ],
+      "icon": "fa fa-bookmark",
+      "leftNavigation": "Y",
+      "checked": false,
+      "order": 1,
+      "enabled": "Y",
+      "menuFor": "6",
+      "description": "Quick Menu",
+      "childMenus": [
+        {
+          "id": "43",
+          "parentId": null,
+          "name": "Doctor Check-In",
+          "path": "/quickMenu/doctorCheckIn",
+          "roles": [
+            12,
+            14
+          ],
+          "icon": "fa fa-bookmark",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "Doctor Quick CheckIn",
+          "childMenus": []
+        },
+        {
+          "id": "44",
+          "parentId": null,
+          "name": "Department Check-In",
+          "path": "/quickMenu/departmentCheckIn",
+          "roles": [
+            12,
+            14
+          ],
+          "icon": "fa fa-bookmark",
+          "leftNavigation": "Y",
+          "checked": false,
+          "order": 1,
+          "enabled": "Y",
+          "menuFor": "6",
+          "description": "Department Quick CheckIn",
+          "childMenus": []
+        }
+      ]
     }
   ]
 }
