--- a/packages/helpers/src/cogent-appointment-client-menu.json
+++ b/packages/helpers/src/cogent-appointment-client-menu.json
@@ -467,10 +467,7 @@
       "parentId": null,
       "name": "Quick Menu",
       "path": "/quickMenu",
-      "roles": [
-        12,
-        14
-      ],
+      "roles": [],
       "icon": "fa fa-bookmark",
       "leftNavigation": "Y",
       "checked": false,
@@ -481,7 +478,7 @@
       "childMenus": [
         {
           "id": "26",
-          "parentId": null,
+          "parentId": 29,
           "name": "Doctor Check-In",
           "path": "/quickMenu/doctorCheckIn",
           "roles": [
@@ -499,7 +496,7 @@
         },
         {
           "id": "28",
-          "parentId": null,
+          "parentId": 29,
           "name": "Department Check-In",
           "path": "/quickMenu/departmentCheckIn",
           "roles": [
